--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="997e9d">  <td>23/11/09 10:35:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginLogoutTest.LoginLogoutMethod(java.lang.String,java.lang.String)[pri:1, instance:Unifyed.Unifyed_Engage.LoginLogoutTest@1500b2f3]">LoginLogoutMethod</td> 
-  <td>main@1408482749</td>   <td></td> </tr>
-<tr bgcolor="997e9d">  <td>23/11/09 10:35:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginLogoutTest.LoginLogoutMethod(java.lang.String,java.lang.String)[pri:1, instance:Unifyed.Unifyed_Engage.LoginLogoutTest@1500b2f3]">LoginLogoutMethod</td> 
-  <td>main@1408482749</td>   <td></td> </tr>
-<tr bgcolor="a9e1e2">  <td>23/11/09 10:36:26</td>   <td>28062</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.driveClose()[pri:0, instance:Unifyed.Unifyed_Engage.LoginLogoutTest@1500b2f3]">&lt;&lt;driveClose</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1408482749</td>   <td></td> </tr>
-<tr bgcolor="a9e1e2">  <td>23/11/09 10:35:31</td>   <td>-27461</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchAppMethod()[pri:0, instance:Unifyed.Unifyed_Engage.LoginLogoutTest@1500b2f3]">&gt;&gt;launchAppMethod</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1408482749</td>   <td></td> </tr>
+<tr bgcolor="7f959b">  <td>24/01/09 11:55:25</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.driveClose()[pri:0, instance:Unifyed.Unifyed_Engage.MyDrive_Test@4f49f6af]">&lt;&lt;driveClose</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@44559647</td>   <td></td> </tr>
+<tr bgcolor="7f959b">  <td>24/01/09 11:54:04</td>   <td>-81705</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchAppMethod()[pri:0, instance:Unifyed.Unifyed_Engage.MyDrive_Test@4f49f6af]">&gt;&gt;launchAppMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@44559647</td>   <td></td> </tr>
+<tr bgcolor="b5be6a">  <td>24/01/09 11:54:48</td>   <td>-37855</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyDrive_Test.loginAdminside()[pri:1, instance:Unifyed.Unifyed_Engage.MyDrive_Test@4f49f6af]">loginAdminside</td> 
+  <td>main@44559647</td>   <td></td> </tr>
+<tr bgcolor="b5be6a">  <td>24/01/09 11:54:48</td>   <td>-37855</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyDrive_Test.loginAdminside()[pri:1, instance:Unifyed.Unifyed_Engage.MyDrive_Test@4f49f6af]">loginAdminside</td> 
+  <td>main@44559647</td>   <td></td> </tr>
+<tr bgcolor="b5be6a">  <td>24/01/09 11:54:48</td>   <td>-37855</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyDrive_Test.loginAdminside()[pri:1, instance:Unifyed.Unifyed_Engage.MyDrive_Test@4f49f6af]">loginAdminside</td> 
+  <td>main@44559647</td>   <td></td> </tr>
+<tr bgcolor="b5be6a">  <td>24/01/09 11:54:58</td>   <td>-27749</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyDrive_Test.myDriveFileUpload()[pri:2, instance:Unifyed.Unifyed_Engage.MyDrive_Test@4f49f6af]">myDriveFileUpload</td> 
+  <td>main@44559647</td>   <td></td> </tr>
 </table>
