--- a/test-output/old/LoginLogoutSuite/methods-alphabetical.html
+++ b/test-output/old/LoginLogoutSuite/methods-alphabetical.html
@@ -1,8 +1,48 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>LoginLogoutSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d48065">  <td>23/11/08 08:56:09</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.driveClose()[pri:0, instance:Unifyed.Unifyed_Engage.LoginLogoutTest@7d64e326]">&lt;&lt;driveClose</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1914108708</td>   <td></td> </tr>
-<tr bgcolor="d48065">  <td>23/11/08 08:56:00</td>   <td>-8895</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchAppMethod()[pri:0, instance:Unifyed.Unifyed_Engage.LoginLogoutTest@7d64e326]">&gt;&gt;launchAppMethod</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1914108708</td>   <td></td> </tr>
+<tr bgcolor="888fa0">  <td>24/01/11 10:11:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginLogoutTest.LoginLogoutMethod(java.lang.String,java.lang.String)[pri:1, instance:Unifyed.Unifyed_Engage.LoginLogoutTest@5c77ba8f]">LoginLogoutMethod</td> 
+  <td>LoginLogoutMethod@0@1503546689</td>   <td></td> </tr>
+<tr bgcolor="888fa0">  <td>24/01/11 10:11:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginLogoutTest.LoginLogoutMethod(java.lang.String,java.lang.String)[pri:1, instance:Unifyed.Unifyed_Engage.LoginLogoutTest@5c77ba8f]">LoginLogoutMethod</td> 
+  <td>LoginLogoutMethod@0@1503546689</td>   <td></td> </tr>
+<tr bgcolor="888fa0">  <td>24/01/11 10:11:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginLogoutTest.LoginLogoutMethod(java.lang.String,java.lang.String)[pri:1, instance:Unifyed.Unifyed_Engage.LoginLogoutTest@5c77ba8f]">LoginLogoutMethod</td> 
+  <td>LoginLogoutMethod@0@1503546689</td>   <td></td> </tr>
+<tr bgcolor="888fa0">  <td>24/01/11 10:11:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginLogoutTest.LoginLogoutMethod(java.lang.String,java.lang.String)[pri:1, instance:Unifyed.Unifyed_Engage.LoginLogoutTest@5c77ba8f]">LoginLogoutMethod</td> 
+  <td>LoginLogoutMethod@0@1503546689</td>   <td></td> </tr>
+<tr bgcolor="888fa0">  <td>24/01/11 10:11:24</td>   <td>10199</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginLogoutTest.LoginLogoutMethod(java.lang.String,java.lang.String)[pri:1, instance:Unifyed.Unifyed_Engage.LoginLogoutTest@5b852b49]">LoginLogoutMethod</td> 
+  <td>LoginLogoutMethod@1@17792118</td>   <td></td> </tr>
+<tr bgcolor="888fa0">  <td>24/01/11 10:11:24</td>   <td>10199</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginLogoutTest.LoginLogoutMethod(java.lang.String,java.lang.String)[pri:1, instance:Unifyed.Unifyed_Engage.LoginLogoutTest@5b852b49]">LoginLogoutMethod</td> 
+  <td>LoginLogoutMethod@1@17792118</td>   <td></td> </tr>
+<tr bgcolor="888fa0">  <td>24/01/11 10:11:24</td>   <td>10199</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginLogoutTest.LoginLogoutMethod(java.lang.String,java.lang.String)[pri:1, instance:Unifyed.Unifyed_Engage.LoginLogoutTest@5b852b49]">LoginLogoutMethod</td> 
+  <td>LoginLogoutMethod@1@17792118</td>   <td></td> </tr>
+<tr bgcolor="888fa0">  <td>24/01/11 10:11:24</td>   <td>10199</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginLogoutTest.LoginLogoutMethod(java.lang.String,java.lang.String)[pri:1, instance:Unifyed.Unifyed_Engage.LoginLogoutTest@5b852b49]">LoginLogoutMethod</td> 
+  <td>LoginLogoutMethod@1@17792118</td>   <td></td> </tr>
+<tr bgcolor="888fa0">  <td>24/01/11 10:11:24</td>   <td>10199</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginLogoutTest.LoginLogoutMethod(java.lang.String,java.lang.String)[pri:1, instance:Unifyed.Unifyed_Engage.LoginLogoutTest@5b852b49]">LoginLogoutMethod</td> 
+  <td>LoginLogoutMethod@1@17792118</td>   <td></td> </tr>
+<tr bgcolor="888fa0">  <td>24/01/11 10:11:24</td>   <td>10199</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginLogoutTest.LoginLogoutMethod(java.lang.String,java.lang.String)[pri:1, instance:Unifyed.Unifyed_Engage.LoginLogoutTest@5b852b49]">LoginLogoutMethod</td> 
+  <td>LoginLogoutMethod@1@17792118</td>   <td></td> </tr>
+<tr bgcolor="888fa0">  <td>24/01/11 10:10:54</td>   <td>-19418</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginLogoutTest.LoginLogoutMethod(java.lang.String,java.lang.String)[pri:1, instance:Unifyed.Unifyed_Engage.LoginLogoutTest@2f5ac102]">LoginLogoutMethod</td> 
+  <td>LoginLogoutMethod@2@791412502</td>   <td></td> </tr>
+<tr bgcolor="888fa0">  <td>24/01/11 10:10:54</td>   <td>-19418</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginLogoutTest.LoginLogoutMethod(java.lang.String,java.lang.String)[pri:1, instance:Unifyed.Unifyed_Engage.LoginLogoutTest@2f5ac102]">LoginLogoutMethod</td> 
+  <td>LoginLogoutMethod@2@791412502</td>   <td></td> </tr>
+<tr bgcolor="888fa0">  <td>24/01/11 10:10:54</td>   <td>-19418</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginLogoutTest.LoginLogoutMethod(java.lang.String,java.lang.String)[pri:1, instance:Unifyed.Unifyed_Engage.LoginLogoutTest@2f5ac102]">LoginLogoutMethod</td> 
+  <td>LoginLogoutMethod@2@791412502</td>   <td></td> </tr>
+<tr bgcolor="888fa0">  <td>24/01/11 10:10:54</td>   <td>-19418</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginLogoutTest.LoginLogoutMethod(java.lang.String,java.lang.String)[pri:1, instance:Unifyed.Unifyed_Engage.LoginLogoutTest@2f5ac102]">LoginLogoutMethod</td> 
+  <td>LoginLogoutMethod@2@791412502</td>   <td></td> </tr>
+<tr bgcolor="888fa0">  <td>24/01/11 10:10:54</td>   <td>-19418</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginLogoutTest.LoginLogoutMethod(java.lang.String,java.lang.String)[pri:1, instance:Unifyed.Unifyed_Engage.LoginLogoutTest@2f5ac102]">LoginLogoutMethod</td> 
+  <td>LoginLogoutMethod@2@791412502</td>   <td></td> </tr>
+<tr bgcolor="888fa0">  <td>24/01/11 10:10:54</td>   <td>-19418</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginLogoutTest.LoginLogoutMethod(java.lang.String,java.lang.String)[pri:1, instance:Unifyed.Unifyed_Engage.LoginLogoutTest@2f5ac102]">LoginLogoutMethod</td> 
+  <td>LoginLogoutMethod@2@791412502</td>   <td></td> </tr>
+<tr bgcolor="b8dcfd">  <td>24/01/11 10:11:28</td>   <td>14858</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.driveClose()[pri:0, instance:Unifyed.Unifyed_Engage.LoginLogoutTest@5c77ba8f]">&lt;&lt;driveClose</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>LoginLogoutMethod@0@1503546689</td>   <td></td> </tr>
+<tr bgcolor="b8dcfd">  <td>24/01/11 10:11:38</td>   <td>24944</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.driveClose()[pri:0, instance:Unifyed.Unifyed_Engage.LoginLogoutTest@5b852b49]">&lt;&lt;driveClose</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>LoginLogoutMethod@1@17792118</td>   <td></td> </tr>
+<tr bgcolor="b8dcfd">  <td>24/01/11 10:11:07</td>   <td>-6874</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.driveClose()[pri:0, instance:Unifyed.Unifyed_Engage.LoginLogoutTest@2f5ac102]">&lt;&lt;driveClose</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>LoginLogoutMethod@2@791412502</td>   <td></td> </tr>
+<tr bgcolor="b8dcfd">  <td>24/01/11 10:09:27</td>   <td>-106264</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchAppMethod()[pri:0, instance:Unifyed.Unifyed_Engage.LoginLogoutTest@5c77ba8f]">&gt;&gt;launchAppMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>CategoryTest-0@0@1503546689</td>   <td></td> </tr>
+<tr bgcolor="b8dcfd">  <td>24/01/11 10:09:27</td>   <td>-106264</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchAppMethod()[pri:0, instance:Unifyed.Unifyed_Engage.LoginLogoutTest@5b852b49]">&gt;&gt;launchAppMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>CategoryTest-1@1@17792118</td>   <td></td> </tr>
+<tr bgcolor="b8dcfd">  <td>24/01/11 10:09:27</td>   <td>-106264</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchAppMethod()[pri:0, instance:Unifyed.Unifyed_Engage.LoginLogoutTest@2f5ac102]">&gt;&gt;launchAppMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>CategoryTest-2@2@791412502</td>   <td></td> </tr>
 </table>
