--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,14 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7171bf">  <td>23/11/08 08:57:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Category_Test.categoryCreate()[pri:1, instance:Unifyed.Unifyed_Engage.Category_Test@44b3606b]">categoryCreate</td> 
-  <td>main@403547747</td>   <td></td> </tr>
-<tr bgcolor="7171bf">  <td>23/11/08 08:58:26</td>   <td>86147</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Category_Test.categoryDelete()[pri:3, instance:Unifyed.Unifyed_Engage.Category_Test@44b3606b]">categoryDelete</td> 
-  <td>main@403547747</td>   <td></td> </tr>
-<tr bgcolor="7171bf">  <td>23/11/08 08:58:08</td>   <td>68401</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Category_Test.categoryEdit()[pri:2, instance:Unifyed.Unifyed_Engage.Category_Test@44b3606b]">categoryEdit</td> 
-  <td>main@403547747</td>   <td></td> </tr>
-<tr bgcolor="d48065">  <td>23/11/08 08:58:30</td>   <td>90701</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.driveClose()[pri:0, instance:Unifyed.Unifyed_Engage.Category_Test@44b3606b]">&lt;&lt;driveClose</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@403547747</td>   <td></td> </tr>
-<tr bgcolor="d48065">  <td>23/11/08 08:56:51</td>   <td>-9034</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchAppMethod()[pri:0, instance:Unifyed.Unifyed_Engage.Category_Test@44b3606b]">&gt;&gt;launchAppMethod</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@403547747</td>   <td></td> </tr>
+<tr bgcolor="b27cdc">  <td>24/01/09 07:47:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Category_Test.categoryCreate()[pri:1, instance:Unifyed.Unifyed_Engage.Category_Test@6492fab5]">categoryCreate</td> 
+  <td>main@828326869</td>   <td></td> </tr>
+<tr bgcolor="b27cdc">  <td>24/01/09 07:47:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Category_Test.categoryCreate()[pri:1, instance:Unifyed.Unifyed_Engage.Category_Test@6492fab5]">categoryCreate</td> 
+  <td>main@828326869</td>   <td></td> </tr>
+<tr bgcolor="b27cdc">  <td>24/01/09 07:47:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Category_Test.categoryCreate()[pri:1, instance:Unifyed.Unifyed_Engage.Category_Test@6492fab5]">categoryCreate</td> 
+  <td>main@828326869</td>   <td></td> </tr>
+<tr bgcolor="b27cdc">  <td>24/01/09 07:47:46</td>   <td>27634</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Category_Test.categoryDelete()[pri:3, instance:Unifyed.Unifyed_Engage.Category_Test@6492fab5]">categoryDelete</td> 
+  <td>main@828326869</td>   <td></td> </tr>
+<tr bgcolor="b27cdc">  <td>24/01/09 07:47:28</td>   <td>10305</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Category_Test.categoryEdit()[pri:2, instance:Unifyed.Unifyed_Engage.Category_Test@6492fab5]">categoryEdit</td> 
+  <td>main@828326869</td>   <td></td> </tr>
+<tr bgcolor="a68a98">  <td>24/01/09 07:47:50</td>   <td>32113</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.driveClose()[pri:0, instance:Unifyed.Unifyed_Engage.Category_Test@6492fab5]">&lt;&lt;driveClose</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@828326869</td>   <td></td> </tr>
+<tr bgcolor="a68a98">  <td>24/01/09 07:46:15</td>   <td>-63574</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchAppMethod()[pri:0, instance:Unifyed.Unifyed_Engage.Category_Test@6492fab5]">&gt;&gt;launchAppMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@828326869</td>   <td></td> </tr>
 </table>
