--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,13 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Category Test Suite</th></tr>
-<tr><td><a href="#t0">CategoryTest</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">87,882</td><td></td><td></td></tr>
+<tr><th colspan="8">LoginLogoutSuite</th></tr>
+<tr><td><a href="#t0">CategoryTest</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">66,059</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Category Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">CategoryTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">Unifyed.Unifyed_Engage.Category_Test</td><td><a href="#m0">categoryCreate</a></td><td rowspan="1">1741344480426</td><td rowspan="1">51638</td></tr><tr class="passedeven"><td><a href="#m1">categoryDelete</a></td><td rowspan="1">1741344549481</td><td rowspan="1">4919</td></tr><tr class="passedeven"><td><a href="#m2">categoryEdit</a></td><td rowspan="1">1741344532072</td><td rowspan="1">17396</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">LoginLogoutSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">CategoryTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Unifyed.Unifyed_Engage.LoginLogoutTest</td><td><a href="#m0">LoginLogoutMethod</a></td><td rowspan="1">1742480414942</td><td rowspan="1">48578</td></tr></tbody>
 </table>
-<h2>CategoryTest</h2><h3 id="m0">Unifyed.Unifyed_Engage.Category_Test#categoryCreate</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">Unifyed.Unifyed_Engage.Category_Test#categoryDelete</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">Unifyed.Unifyed_Engage.Category_Test#categoryEdit</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>CategoryTest</h2><h3 id="m0">Unifyed.Unifyed_Engage.LoginLogoutTest#LoginLogoutMethod</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>philip_parker@unifyedqa.edu</td><td>Admin@2008</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
