--- a/test-output/index.html
+++ b/test-output/index.html
@@ -38,8 +38,8 @@
       <div class="suite">
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
-            <a href="#" panel-name="suite-Category_Test_Suite" class="navigator-link">
-              <span class="suite-name border-passed">Category Test Suite</span>
+            <a href="#" panel-name="suite-LoginLogoutSuite" class="navigator-link">
+              <span class="suite-name border-passed">LoginLogoutSuite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -49,37 +49,37 @@
             <div class="suite-section-content">
               <ul>
                 <li>
-                  <a href="#" panel-name="test-xml-Category_Test_Suite" class="navigator-link ">
-                    <span>E:\Projects\Unifyed_Engage\test_Suite\category.xml</span>
+                  <a href="#" panel-name="test-xml-LoginLogoutSuite" class="navigator-link ">
+                    <span>E:\Projects\Unifyed_Engage\test_Suite\Sanity.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="testlist-Category_Test_Suite" class="navigator-link ">
+                  <a href="#" panel-name="testlist-LoginLogoutSuite" class="navigator-link ">
                     <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="group-Category_Test_Suite" class="navigator-link ">
+                  <a href="#" panel-name="group-LoginLogoutSuite" class="navigator-link ">
                     <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="times-Category_Test_Suite" class="navigator-link ">
+                  <a href="#" panel-name="times-LoginLogoutSuite" class="navigator-link ">
                     <span>Times</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="reporter-Category_Test_Suite" class="navigator-link ">
+                  <a href="#" panel-name="reporter-LoginLogoutSuite" class="navigator-link ">
                     <span>Reporter output</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="ignored-methods-Category_Test_Suite" class="navigator-link ">
+                  <a href="#" panel-name="ignored-methods-LoginLogoutSuite" class="navigator-link ">
                     <span>Ignored methods</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="chronological-Category_Test_Suite" class="navigator-link ">
+                  <a href="#" panel-name="chronological-LoginLogoutSuite" class="navigator-link ">
                     <span>Chronological view</span>
                   </a> <!-- navigator-link  -->
                 </li>
@@ -92,31 +92,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
                     <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Category_Test_Suite" class="hide-methods passed suite-Category_Test_Suite"> (hide)</a> <!-- hide-methods passed suite-Category_Test_Suite -->
-                      <a href="#" panel-name="suite-Category_Test_Suite" class="show-methods passed suite-Category_Test_Suite"> (show)</a> <!-- show-methods passed suite-Category_Test_Suite -->
+                      <a href="#" panel-name="suite-LoginLogoutSuite" class="hide-methods passed suite-LoginLogoutSuite"> (hide)</a> <!-- hide-methods passed suite-LoginLogoutSuite -->
+                      <a href="#" panel-name="suite-LoginLogoutSuite" class="show-methods passed suite-LoginLogoutSuite"> (show)</a> <!-- show-methods passed suite-LoginLogoutSuite -->
                     </span>
-                    <div class="method-list-content passed suite-Category_Test_Suite">
+                    <div class="method-list-content passed suite-LoginLogoutSuite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Category_Test_Suite" title="Unifyed.Unifyed_Engage.Category_Test" class="method navigator-link" hash-for-method="categoryCreate">categoryCreate</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-LoginLogoutSuite" title="Unifyed.Unifyed_Engage.LoginLogoutTest" class="method navigator-link" hash-for-method="LoginLogoutMethod(philip_parker@unifyedqa.edu, Admin@2008)">LoginLogoutMethod(philip_parker@unifyedqa.edu, Admin@2008)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Category_Test_Suite" title="Unifyed.Unifyed_Engage.Category_Test" class="method navigator-link" hash-for-method="categoryDelete">categoryDelete</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Category_Test_Suite" title="Unifyed.Unifyed_Engage.Category_Test" class="method navigator-link" hash-for-method="categoryEdit">categoryEdit</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content passed suite-Category_Test_Suite -->
+                    </div> <!-- method-list-content passed suite-LoginLogoutSuite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -127,61 +117,48 @@
     </div> <!-- navigator-root -->
     <div class="wrapper">
       <div class="main-panel-root">
-        <div panel-name="suite-Category_Test_Suite" class="panel Category_Test_Suite">
-          <div class="suite-Category_Test_Suite-class-passed">
+        <div panel-name="suite-LoginLogoutSuite" class="panel LoginLogoutSuite">
+          <div class="suite-LoginLogoutSuite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Unifyed.Unifyed_Engage.Category_Test</span>
+              <span class="class-name">Unifyed.Unifyed_Engage.LoginLogoutTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="categoryCreate">
-                  </a> <!-- categoryCreate -->
-                  <span class="method-name">categoryCreate</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="categoryDelete">
-                  </a> <!-- categoryDelete -->
-                  <span class="method-name">categoryDelete</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="categoryEdit">
-                  </a> <!-- categoryEdit -->
-                  <span class="method-name">categoryEdit</span>
+                  <a name="LoginLogoutMethod(philip_parker@unifyedqa.edu, Admin@2008)">
+                  </a> <!-- LoginLogoutMethod(philip_parker@unifyedqa.edu, Admin@2008) -->
+                  <span class="method-name">LoginLogoutMethod</span>
+                  <span class="parameters">(philip_parker@unifyedqa.edu,Admin@2008)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Category_Test_Suite-class-passed -->
-        </div> <!-- panel Category_Test_Suite -->
-        <div panel-name="test-xml-Category_Test_Suite" class="panel">
+          </div> <!-- suite-LoginLogoutSuite-class-passed -->
+        </div> <!-- panel LoginLogoutSuite -->
+        <div panel-name="test-xml-LoginLogoutSuite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">E:\Projects\Unifyed_Engage\test_Suite\category.xml</span>
+            <span class="header-content">E:\Projects\Unifyed_Engage\test_Suite\Sanity.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite name=&quot;Category Test Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+&lt;suite name=&quot;LoginLogoutSuite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;listeners&gt;
     &lt;listener class-name=&quot;Unifyed.Unifyed_Engage.TestComponents.Listeners&quot;/&gt;
   &lt;/listeners&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;CategoryTest&quot;&gt;
+  &lt;test thread-count=&quot;1&quot; name=&quot;CategoryTest&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Unifyed.Unifyed_Engage.Category_Test&quot;/&gt;
+      &lt;class name=&quot;Unifyed.Unifyed_Engage.LoginLogoutTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- CategoryTest --&gt;
-&lt;/suite&gt; &lt;!-- Category Test Suite --&gt;
+&lt;/suite&gt; &lt;!-- LoginLogoutSuite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="testlist-Category_Test_Suite" class="panel">
+        <div panel-name="testlist-LoginLogoutSuite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Tests for Category Test Suite</span>
+            <span class="header-content">Tests for LoginLogoutSuite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <ul>
@@ -191,90 +168,74 @@
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="group-Category_Test_Suite" class="panel">
+        <div panel-name="group-LoginLogoutSuite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Groups for Category Test Suite</span>
+            <span class="header-content">Groups for LoginLogoutSuite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="times-Category_Test_Suite" class="panel">
+        <div panel-name="times-LoginLogoutSuite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Times for Category Test Suite</span>
+            <span class="header-content">Times for LoginLogoutSuite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="times-div">
               <script type="text/javascript">
-suiteTableInitFunctions.push('tableData_Category_Test_Suite');
-function tableData_Category_Test_Suite() {
+suiteTableInitFunctions.push('tableData_LoginLogoutSuite');
+function tableData_LoginLogoutSuite() {
 var data = new google.visualization.DataTable();
 data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'categoryCreate')
-data.setCell(0, 2, 'Unifyed.Unifyed_Engage.Category_Test')
-data.setCell(0, 3, 51638);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'categoryEdit')
-data.setCell(1, 2, 'Unifyed.Unifyed_Engage.Category_Test')
-data.setCell(1, 3, 17396);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'categoryDelete')
-data.setCell(2, 2, 'Unifyed.Unifyed_Engage.Category_Test')
-data.setCell(2, 3, 4919);
-window.suiteTableData['Category_Test_Suite']= { tableData: data, tableDiv: 'times-div-Category_Test_Suite'}
+data.setCell(0, 1, 'LoginLogoutMethod')
+data.setCell(0, 2, 'Unifyed.Unifyed_Engage.LoginLogoutTest')
+data.setCell(0, 3, 48578);
+window.suiteTableData['LoginLogoutSuite']= { tableData: data, tableDiv: 'times-div-LoginLogoutSuite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
-              <div id="times-div-Category_Test_Suite">
-              </div> <!-- times-div-Category_Test_Suite -->
+              <span class="suite-total-time">Total running time: 48 seconds</span>
+              <div id="times-div-LoginLogoutSuite">
+              </div> <!-- times-div-LoginLogoutSuite -->
             </div> <!-- times-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="reporter-Category_Test_Suite" class="panel">
+        <div panel-name="reporter-LoginLogoutSuite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Reporter output for Category Test Suite</span>
+            <span class="header-content">Reporter output for LoginLogoutSuite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="ignored-methods-Category_Test_Suite" class="panel">
+        <div panel-name="ignored-methods-LoginLogoutSuite" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="chronological-Category_Test_Suite" class="panel">
+        <div panel-name="chronological-LoginLogoutSuite" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">Methods in chronological order</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">Unifyed.Unifyed_Engage.Category_Test</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">Unifyed.Unifyed_Engage.LoginLogoutTest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">launchAppMethod</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">categoryCreate</span>
-                <span class="method-start">12845 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">categoryEdit</span>
-                <span class="method-start">64491 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">categoryDelete</span>
-                <span class="method-start">81900 ms</span>
+                <span class="method-name">LoginLogoutMethod(philip_parker@unifyedqa.edu, Admin@2008)</span>
+                <span class="method-start">16537 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">driveClose</span>
-                <span class="method-start">86825 ms</span>
+                <span class="method-start">65138 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
